[project]
name = "hands-on-data-science-and-machine-learning-portfolio-development-with-python-and-scikit-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "wordcloud>=1.9.4",
]
